generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "postgresql"
  url = "***"
}

model User {
  id                             String   @id @default(cuid())
  createdAt                      DateTime @default(now())
  updatedAt                      DateTime @updatedAt
  email                          String   @unique
  password                       String
  firstname                      String?
  lastname                       String?
  role                           Role
  isActive                       Boolean   @default(true)
  Rating_Rating_reviewedIDToUser Rating[]  @relation("Rating_reviewedIDToUser")
  Rating_Rating_reviewerIDToUser Rating[]  @relation("Rating_reviewerIDToUser")
}

model Rating {
  id                           String   @id @default(cuid())
  createdAt                    DateTime @default(now())
  updatedAt                    DateTime @updatedAt
  reviewerID                   String
  reviewedID                   String
  categoryID                   String
  rating                       Int
  notes                        String?
  User_Rating_reviewedIDToUser User     @relation("Rating_reviewedIDToUser", fields: [reviewedID], references: [id])
  User_Rating_reviewerIDToUser User     @relation("Rating_reviewerIDToUser", fields: [reviewerID], references: [id])
  Rating_Category_categoryToCategory  Category  @relation(fields: [categoryID], references: [id])
}

model Category {
  id                           String   @id @default(cuid())
  name                         String
  isActive                     Boolean  @default(true)
}

enum Role {
  ADMIN
  APPRENTICE
  FTE
}
