//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  password String [not null]
  firstname String
  lastname String
  role Role [not null]
  isActive Boolean [not null, default: true]
  Rating_Rating_reviewedIDToUser Rating
  Rating_Rating_reviewerIDToUser Rating
}

Table Rating {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  reviewerID String [not null]
  reviewedID String [not null]
  categoryID String [not null]
  rating Int [not null]
  notes String
  User_Rating_reviewedIDToUser User [not null]
  User_Rating_reviewerIDToUser User [not null]
  Rating_Category_categoryToCategory Category [not null]
}

Table Category {
  id String [pk]
  name String [not null]
  isActive Boolean [not null, default: true]
  Rating Rating
}

Enum Role {
  ADMIN
  APPRENTICE
  FTE
}

Ref: Rating.reviewedID > User.id

Ref: Rating.reviewerID > User.id

Ref: Rating.categoryID > Category.id